# FUI

./: .gitignore  Chess.md  FUI links, video, apps - general ideea  README.md
Evaluation Logs and Movies/: user2 kb stdout win after 4min, gameover.txt  user2 touch Tobias stdout crash after 4min.txt  user6 dominic voicekeyboard stdout.txt  user6 dominic voicetouch stdout - Copy.txt
FooBillard/: .gitignore  CManipulationEventSink.cpp  FooBillard.sln  FooBillard.vcxproj  FooBillard.vcxproj.filters  VoiceInput.cpp  VoiceInput.h  mm.cpp  mm.h  processTouch.cpp  resource.h  run.bat
FooBillard/data/: Makefile  Makefile.in
FooBillard/dep/SDL-1.2.15/VisualC/: UpgradeLog.htm
FooBillard/dep/getopt/: getopt.sln  getopt.vcxproj  getopt.vcxproj.filters
FooBillard/dep/libpng-1.2.8-src/: makefile.mingw.rej  png.h
FooBillard/dep/libpng-1.2.8-src/libpng/: libpng.sln  libpng.vcxproj  libpng.vcxproj.filters
FooBillard/dep/libpng-1.2.8-src/scripts/: libpng.pc.in.rej
FooBillard/dependencies/: getopt.lib  libpng.lib
FooBillard/src/: aiplayer.c  aiplayer.h  ball.c  ball.h  billard.c  billard.h  billard3d.c  billmove.c  billmove.h  bumpref.c  bumpref.h  config.h  evaluate_move.c  evaluate_move.h  font.c  font.h  gamemenu.h  helpscreen.c  helpscreen.h  menu.c  menu.h  myinclude.h  net_socket.c  net_socket.h  options.c  options.h  player.h  png_loader.c  png_loader.h  queue.c  queue.h  sound_stuff.c  sound_stuff.h  sys_stuff.c  sys_stuff.h  table.c  table.h  textobj.c  textobj.h  vmath.c  (+1 more)
FooBillardOfficialBinaryUnchanged/: commandline parameters.txt  stdout.txt
GesturePlayground/: GesturePlayground.cpp  GesturePlayground.rc  GesturePlayground.sln  GesturePlayground.vcxproj  GesturePlayground.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
ManipulationsPlayground/: CManipulationEventSink.cpp  CManipulationEventSink.h  MinipulationsPlayground.cpp  MinipulationsPlayground.rc  MinipulationsPlayground.sln  MinipulationsPlayground.vcxproj  MinipulationsPlayground.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
VoiceInput/: .gitignore  FooBillardVoiceInput.sln
VoiceInput/FooBillardVoiceInput/: FooBillardVoiceInput.csproj  Program.cs
VoiceInput/FooBillardVoiceInput/Properties/: AssemblyInfo.cs
VoiceInput/VoiceInputCom/: Class1.cs  VoiceInputCom.csproj
VoiceInput/VoiceInputCom/Properties/: AssemblyInfo.cs
foobillard-3.0-src-2_/: CManipulationEventSink.cpp  CManipulationEventSink.h  INSTALL  Makefile  Makefile.am  Makefile.in  README.win32  config.status  configure  configure.in  foobillard-3.0-src-2_.sln  foobillard-3.0-src-2_.vcxproj  foobillard-3.0-src-2_.vcxproj.filters  foobillard-SDL.spec  foobillard-SDL.spec.in  foobillard.spec  foobillard.spec.in  helptext.txt  mm.cpp  mm.h  processTouch.cpp
foobillard-3.0-src-2_/data/: Makefile.am
foobillard-3.0-src-2_/dependencies/: SDL.lib  SDLmain.lib
foobillard-3.0-src-2_/src/: Makefile  Makefile.mingw  aiplayer.c  ball.c  ball.h  billard.c  billard3d.c  billmove.c  bumpref.c  config.h  evaluate_move.c  evaluate_move.h  font.c  font.h  foobillard.rc  m  net_socket.c  net_socket.h  options.c  options.h  player.h  png_loader.c  png_loader.h  sound_stuff.c  sound_stuff.h  sys_stuff.c  table.c  table.h  textobj.c  vmath.c
foobillard-3.0-src-2_/src.orig/: Makefile.am  Makefile.in  aiplayer.c  aiplayer.h  ball.c  billard.c  billard.h  billard3d.c  billmove.c  billmove.h  bumpref.c  bumpref.h  config.h.in  evaluate_move.c  evaluate_move.h  font.c  gamemenu.h  helpscreen.c  helpscreen.h  menu.c  menu.h  net_socket.c  options.c  options.h  png_loader.c  queue.c  queue.h  sound_stuff.c  sound_stuff.h  sys_stuff.c  sys_stuff.h  table.c  textobj.c  textobj.h  vmath.c  vmath.h
foobillard-3.0-src-2_/src/.deps/: aiplayer.Po  ball.Po  billard.Po  billard3d.Po  billmove.Po  bumpref.Po  evaluate_move.Po  font.Po  helpscreen.Po  menu.Po  net_socket.Po  options.Po  png_loader.Po  queue.Po  sound_stuff.Po  sys_stuff.Po  table.Po  textobj.Po  vmath.Po
