pkgdata_DATA = blende.png \
               bluebold.ttf \
               cue_shadow.png \
               foobillard.gif \
               foobillard.png \
               full_symbol.png \
               fullhalf_symbol.png \
               half_symbol.png \
               iomanoid.ttf \
               lightflare.png \
               place_cue_ball.png \
               queue.png \
               queue_shadow.png \
               shadow2.png \
               shadow3.png \
               shadow_alpha.png \
               sphere_map_128x128.png \
               sphere_map_128x128_light.png \
               sphere_map_64x64.png \
               table-frame.png \
               tabletex_fB_128x128.png \
               tabletex_fB_256x256.png \
               youregon.ttf \
               ball_ball.raw \
               posx.png \
               posy.png \
               posz.png \
               negx.png \
               negy.png \
               negz.png \
               bumpref.png \
               cloth.png
               

EXTRA_DIST = ${pkgdata_DATA}
